<resources>
    <string name="app_name">InfiniSpace</string>
    <string name="scoretxt">Score:</string>
    <string name="bestscore">Best: </string>
    <string name="tapstart">Tap To Start</string>
    <string name="gameover">Game Over!</string>
    <string name="restart">Start Over</string>
    <string name="topten">Top Scores</string>
    <string name="exit">Exit Game</string>
    <string name="runningtime">Time: </string>
    <string name="runninglevel">Level: </string>
    <string name="infoalert">InfiniSpace is a game for everyone, and especially for those who love space. Collect the golden balls and beware of the asteroids that can destroy your ship.\\ Your ship have an excellent shield and that\'s why the ship will not be destroyed before it will suffer 4 deadly hits from the asteroids, it doesn\'t really matter if they are big or small. BE AWARE!</string>
    <string name="info_title">INFORMATION:</string>
    <string name="got_it">GOT IT!</string>
</resources>