<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/mainscreen">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:id="@+id/bg1"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            android:id="@+id/bg2"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clouds1"
            android:background="@drawable/clouds"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/clouds2"
            android:background="@drawable/clouds"
            />

    </RelativeLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tapstart"
        android:id="@+id/taptostartTV"
        android:textSize="45dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_gravity="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/astro"
        android:src="@drawable/astro"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallastro"
        android:src="@drawable/heartstro"
        android:visibility="gone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreball"
        android:src="@drawable/scoreball2"
        android:visibility="gone"/>

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="285px"
        android:layout_height="132px"
        android:src="@drawable/rocket"
        android:id="@+id/spaceShip"
        android:layout_gravity="center_vertical"
        />
</FrameLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:id="@+id/timerLL">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/runningtime"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        />
    <Chronometer
        android:paddingStart="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timer"
        android:textSize="20dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@id/timerLL"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/runninglevel"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:id="@+id/lvlTV"
            android:paddingLeft="5dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scoreLL"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scoretxt"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/scoreTV"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/realscore"
                android:text="0"
                android:paddingLeft="20dp"
                android:textSize="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                />
        </LinearLayout>
 <LinearLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bestscore"
         android:textSize="20dp"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         android:id="@+id/bestTV"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/realbest"
         android:text="0"
         android:paddingLeft="31dp"
         android:textSize="20dp"
         android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         />
 </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pauseLL"
        android:layout_alignEnd="@id/background"
        android:layout_alignBottom="@id/background"
        >
        <ImageButton
            android:layout_width="100px"
            android:layout_height="100px"
            android:id="@+id/pauseIB"
            android:background="@drawable/pausebtn"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shields"
        android:layout_alignEnd="@id/background"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"

        >
        <ImageView
            android:layout_width="112px"
            android:layout_height="147px"
            android:id="@+id/shield1"
            android:background="@drawable/shi"
            android:paddingLeft="100dp"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="112px"
            android:layout_height="147px"
            android:id="@+id/shield2"
            android:background="@drawable/shi"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="112px"
            android:layout_height="147px"
            android:id="@+id/shield3"
            android:background="@drawable/shi"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shieldsStroke"
        android:layout_alignEnd="@id/background"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp">
        <ImageView
            android:layout_width="112px"
            android:layout_height="147px"
            android:id="@+id/stroke1"
            android:background="@drawable/shi_stroke"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="112px"
            android:layout_height="147px"
            android:id="@+id/stroke2"
            android:background="@drawable/shi_stroke"
            android:layout_marginEnd="5dp"/>
        <ImageView
            android:layout_width="112px"
            android:layout_height="147px"
            android:id="@+id/stroke3"
            android:background="@drawable/shi_stroke"
            android:layout_marginEnd="5dp"/>

    </LinearLayout>




</RelativeLayout>